--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap');
 
 :root {
@@ -37,7 +40,7 @@ body {
 }
 /* Globales */
 .container {
-	max-width: 1200px;
+	width: 100%;
 	margin: 0 auto;
 }
 
